docs/stylesheets/extra.css
.card-grid {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 50px 2vw;
    transform-style: preserve-3d;
    height: 100%;
    max-width: 1200px;
    margin: auto;
    padding: 0 50px;
    position: relative;
}

.card-grid>.card:nth-child(1n) {
    position: relative;
    z-index: 3;
    transform: translateZ(0.1px) rotate(-5deg);
}

.card-grid>.card:nth-child(2n) {
    position: relative;
    z-index: 2;
    transform: translateZ(0.1px) rotate(0);
}

.card-grid>.card:nth-child(3n) {
    position: relative;
    z-index: 1;
    transform: translateZ(0.1px) rotate(5deg);
}

.card-grid--fan >.card:nth-child(1n) {
    left: 200px;
    top: 10px;
}
    
.card-grid--fan >.card:nth-child(2n) {
    left: 0px;
    top: -10px;
}

.card-grid--fan >.card:nth-child(3n) {
    left: -200px;
    top: 0px;
}

.card img {
    border-radius: 17px;
    box-shadow: 0 0 3px -1px transparent, 0 0 2px 1px transparent, 0 0 5px 0px transparent, 0px 4px 20px -5px rgba(0,0,0,0.3), 0 2px 10px -5px rgba(0,0,0,0.3), 0 0 20px 0px transparent
}

.card h2 {
    visibility: hidden;
    height: 0px;
    margin: 0;
}

@media screen and (min-width: 600px) and (max-width: 900px) {
    .card-grid {
        max-width: 420px;
        margin: auto;
    }

    .card-grid>.card:nth-child(1n) {
        left: -100px;
        top: 10px;
    }

    .card-grid>.card:nth-child(2n) {
        left: 0px;
        top: -10px;
    }

    .card-grid>.card:nth-child(3n) {
        left: 100px;
        top: 0px;
    }
}

@media screen and (max-width: 900px) {
    .card-grid>.card {
        grid-column: 1;
        grid-row: 1;
        transition: opacity .2s ease,transform .2s ease;
    }

    .card-grid>.card:nth-child(1n) {
        left: -50px;
        top: 10px;
    }

    .card-grid>.card:nth-child(2n) {
        left: 0px;
        top: -10px;
    }

    .card-grid>.card:nth-child(3n) {
        left: 50px;
        top: 0px;
    }
}

@media screen and (min-width: 900px) {
    .card-grid {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

.gslide-image img {
    background-color: transparent !important;
}

.jlpt-listing {
    text-align: center;
}

.jlpt-listing h2 {
    margin-top: 0;
}

.jlpt-listing a {
    display: inline-block;
    padding: 0 1rem 1rem 1rem;
}

.md-footer {
    background-color: white;
    color: #aaaaaa;
    text-align: center;
}

.md-footer a {
    text-decoration: underline;
}

